; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/freescale/enetc/extr_enetc_pf.c_enetc_enable_si_vlan_promisc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/freescale/enetc/extr_enetc_pf.c_enetc_enable_si_vlan_promisc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.enetc_pf = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.enetc_pf*, i32)* @enetc_enable_si_vlan_promisc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enetc_enable_si_vlan_promisc(%struct.enetc_pf* %0, i32 %1) #0 {
  %3 = alloca %struct.enetc_pf*, align 8
  %4 = alloca i32, align 4
  store %struct.enetc_pf* %0, %struct.enetc_pf** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @BIT(i32 %5)
  %7 = load %struct.enetc_pf*, %struct.enetc_pf** %3, align 8
  %8 = getelementptr inbounds %struct.enetc_pf, %struct.enetc_pf* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = or i32 %9, %6
  store i32 %10, i32* %8, align 8
  %11 = load %struct.enetc_pf*, %struct.enetc_pf** %3, align 8
  %12 = getelementptr inbounds %struct.enetc_pf, %struct.enetc_pf* %11, i32 0, i32 1
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load %struct.enetc_pf*, %struct.enetc_pf** %3, align 8
  %16 = getelementptr inbounds %struct.enetc_pf, %struct.enetc_pf* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = call i32 @enetc_set_vlan_promisc(i32* %14, i32 %17)
  ret void
}

declare dso_local i32 @BIT(i32) #1

declare dso_local i32 @enetc_set_vlan_promisc(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
